@@ -1,6 +1,7 @@
 OpenLDAP 2.2 Change Log
 
 OpenLDAP 2.2.27 Engineering
+	Fixed back-bdb/hdb slapcat checkpoint on close (ITS#3703)
 	Fixed back-ldap/back-meta debug output of NULL strings (ITS#3698)
 	Fixed back-meta sizelimit bug (ITS#3720)
 	Fixed syncrepl runqueue (ITS#3542)
